--- a/resources/css/tailwind.css
+++ b/resources/css/tailwind.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 a {
+    @apply no-underline;
+  }
+  h1 {
+    @apply text-3xl;
+  }
+  h2 {
+    @apply text-2xl;
+  }
+  h3 {
+    @apply text-xl;
+  }
+  h4 {
+    @apply text-lg;
+  }
+
+  nav ul {
+    @apply flex gap-2 flex-wrap;
+  }
+
+  nav a {
+    @apply underline hover:no-underline hover:text-orange-600;
+  }
+
+}
