--- a/resources/css/tailwind.css
+++ b/resources/css/tailwind.css
@@ -3,10 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  h1 a {
-    @apply no-underline;
-  }
   h1 {
+    @apply no-underline;
     @apply text-3xl;
   }
   h2 {
@@ -17,6 +15,10 @@
   }
   h4 {
     @apply text-lg;
+  }
+
+  #content p {
+    @apply mt-2;
   }
 
   nav ul {
