--- a/resources/css/tailwind.css
+++ b/resources/css/tailwind.css
@@ -17,8 +17,20 @@
     @apply text-lg;
   }
 
+  #content h3,h4,h5 {
+    @apply mt-3 mb-1;
+  }
+
   #content p {
     @apply mt-2;
+  }
+
+  #content hr {
+    @apply my-8;
+  }
+
+  #content ol {
+    @apply list-decimal my-2 list-inside;
   }
 
   nav ul {
