--- a/resources/css/tailwind.css
+++ b/resources/css/tailwind.css
@@ -25,12 +25,20 @@
     @apply mt-2;
   }
 
+  #content a {
+    @apply underline;
+  }
+
   #content hr {
     @apply my-8;
   }
 
   #content ol {
     @apply list-decimal my-2 list-inside;
+  }
+
+  #content ul {
+    @apply list-disc my-2 list-inside;
   }
 
   nav ul {
