--- a/resources/css/tailwind.css
+++ b/resources/css/tailwind.css
@@ -41,6 +41,10 @@
     @apply list-disc my-2 list-inside;
   }
 
+  #content code {
+    @apply text-sm font-thin bg-gray-700 text-white p-1;
+  }
+
   nav ul {
     @apply flex gap-2 flex-wrap;
   }
